# machine-learning-course

./: README.md  pyproject.toml
analysis/: beers.py  classifier.py  fruits.py  regression.py  stars_wars.py
data/: dados_cerveja.xlsx  dados_cerveja_nota.xlsx  dados_frutas.xlsx
