[project]
name = "machine-learning-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 99
ignore = ["E402"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
fruits = "uv run python -m src.analysis.fruits"
